springBoot整合Mybatis单数据源

--- a/service-provider/src/main/resources/application.properties
+++ b/service-provider/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+# datasouce config
+durian.jdbc.driverClassName = com.mysql.jdbc.Driver
+durian.jdbc.url = jdbc:mysql://192.168.145.10:3306/durian?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT
+durian.jdbc.username = app
+durian.jdbc.password = 123456
