添加springboot整合多数据源，并使用aop实现多数据源切换

--- a/service-provider/src/main/resources/application.properties
+++ b/service-provider/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 # datasouce config
+# durian datasource
 durian.jdbc.driverClassName = com.mysql.jdbc.Driver
 durian.jdbc.url = jdbc:mysql://192.168.145.10:3306/durian?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT
 durian.jdbc.username = app
 durian.jdbc.password = 123456
+
+# bigdata datasource
+bigdata.jdbc.driverClassName = com.mysql.jdbc.Driver
+bigdata.jdbc.url = jdbc:mysql://192.168.145.10:3306/bigdata?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT
+bigdata.jdbc.username = app
+bigdata.jdbc.password = 123456
