--- a/service-provider/src/main/resources/application.properties
+++ b/service-provider/src/main/resources/application.properties
@@ -10,3 +10,7 @@ bigdata.jdbc.driverClassName = com.mysql.jdbc.Driver
 bigdata.jdbc.url = jdbc:mysql://192.168.145.10:3306/bigdata?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT
 bigdata.jdbc.username = app
 bigdata.jdbc.password = 123456
+
+# redis config
+redis.cluster.servers = 192.168.145.10:7000,192.168.145.10:7001,192.168.145.10:7002,192.168.145.11:7003,192.168.145.11:7004,192.168.145.11:7005
+redis.cluster.commandTimeout = 5000
