--- a/service-provider/src/main/resources/application.properties
+++ b/service-provider/src/main/resources/application.properties
@@ -1,16 +1,5 @@
-## datasouce config
-## durian datasource
-#durian.jdbc.driverClassName = com.mysql.jdbc.Driver
-#durian.jdbc.url = jdbc:mysql://192.168.145.10:3306/durian?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT
-#durian.jdbc.username = app
-#durian.jdbc.password = 123456
-#
-## bigdata datasource
-#bigdata.jdbc.driverClassName = com.mysql.jdbc.Driver
-#bigdata.jdbc.url = jdbc:mysql://192.168.145.10:3306/bigdata?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT
-#bigdata.jdbc.username = app
-#bigdata.jdbc.password = 123456
-#
-## redis config
-#redis.cluster.servers = 192.168.145.10:7000,192.168.145.10:7001,192.168.145.10:7002,192.168.145.11:7003,192.168.145.11:7004,192.168.145.11:7005
-#redis.cluster.commandTimeout = 5000
+# Dubbo \u670D\u52A1\u63D0\u4F9B\u8005\u914D\u7F6E
+dubbo.application.name=dubbo-provider
+dubbo.protocol.name=dubbo
+dubbo.protocol.port=12345
+dubbo.registry.address=zookeeper://192.168.1.54:2181
