--- a/service-consumer/src/main/resources/application.properties
+++ b/service-consumer/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+##Dubbo  \u670D\u52A1\u6D88\u8D39\u8005\u914D\u7F6E
+dubbo.application.name=dubbo-cusomer
+dubbo.registry.address=zookeeper://192.168.1.54:2181
