--- a/service-provider/pom.xml
+++ b/service-provider/pom.xml
@@ -23,6 +23,12 @@
     <dependencies>
         <dependency>
             <groupId>com.example</groupId>
+            <artifactId>api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.example</groupId>
             <artifactId>common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
@@ -41,7 +47,6 @@
 
     <build>
         <plugins>
-
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
