--- a/common/pom.xml
+++ b/common/pom.xml
@@ -37,6 +37,11 @@
         <!--</dependency>-->
 
         <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.43.Final</version>
+        </dependency>
+        <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>4.6.1</version>
