--- a/nacos-example/src/main/resources/application.properties
+++ b/nacos-example/src/main/resources/application.properties
@@ -7,3 +7,5 @@ nacos.config.namespace=dev
 # 服务注册发现
 nacos.discovery.server-addr=192.168.91.156:8648,192.168.91.156:8748,192.168.91.156:8848
 nacos.discovery.namespace=dev
+#nacos.discovery.register.service-name= nacos-example
+#nacos.discovery.register.group-name= DEFAULT_GROUP
